--- a/style.css
+++ b/style.css
@@ -1,41 +1,45 @@
 body{
-font-family:sans-serif;
-font-size:larger;
-background-image:url('../images/bg.jpg');
-background-size:cover;
-background-repeat:no-repeat;
-background-attachment:fixed;
+    text-align: center;
+    font-family: Verdana, Tahoma, sans-serif;
+    font-size: larger;
+    background-image: url('../images/malaria.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-
+ h1,p{
+   padding: 5px;
+   border-radius: 5px;
+    background-color: #f2f2f2;
+}
+form{
+    padding: 10px;
+}
 td{
-padding:10px}
-table{
-background-color:white;
-border-radius:5px;
-padding:20px
+    padding: 6px;
 }
-#btn
-{
-background-color:#4e9ad7;
-width:100%;
-border:10px;
-border-radius:7px;
-padding:15px 32px;
-color:white;
-font-size:16px;
-cursor:pointer;
+input[type=number]{
+
+    padding: 8px 0px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+#btn{
+    background-color: #52abf3;
+    width: 100%;
+    border: 10px;
+    border-radius: 7px;
+    color: white;
+    padding: 15px 32px;
+    font-size: 16px;
+    cursor: pointer;
 }
 #btn:hover{
-background-color:#2680c9;
+    background-color:#008bf9;
 }
-input[type=number]
-{ padding:8px 8px;
-border: 1px solid #ccc;
-border-radius:4px;
-margine:8px 8px;
-}
-h1,p{
-background-color:#f2f2f2;
-padding:5px;
-border-radius:5px;
+table{
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
